[gd_scene load_steps=8 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Pause.gd" type="Script" id=2]
[ext_resource path="res://Land.tscn" type="PackedScene" id=3]
[ext_resource path="res://Castle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Restart.gd" type="Script" id=6]
[ext_resource path="res://backdrop.png" type="Texture" id=7]
[ext_resource path="res://Turret/Turret.tscn" type="PackedScene" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Pause" type="Control" parent="Background"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Background/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Backdrop" type="Sprite" parent="Background"]
texture = ExtResource( 7 )
centered = false

[node name="Land" parent="Background" instance=ExtResource( 3 )]
position = Vector2( 0, 376 )
tile_data = PoolIntArray( 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1376296, 0, 0, 1376297, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376302, 0, 0, 1376303, 0, 0, 1376304, 0, 0, 1376305, 0, 0, 1376306, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1376309, 0, 0, 1376310, 0, 0, 1376311, 0, 0, 1376312, 0, 0, 1376313, 0, 0, 1376314, 0, 0, 1376315, 0, 0 )

[node name="Castle" parent="Background" instance=ExtResource( 4 )]
position = Vector2( 984, 984 )

[node name="TurretLeft" parent="Background/Castle" instance=ExtResource( 8 )]
position = Vector2( -176, 48 )

[node name="TurretRight" parent="Background/Castle" instance=ExtResource( 8 )]
position = Vector2( 176, 48 )
MIN_ANGLE = 2.0
MAX_ANGLE = 3.3

[node name="Fun" type="CanvasLayer" parent="."]

[node name="Restart" type="Button" parent="Fun"]
margin_left = 208.0
margin_top = 1056.0
margin_right = 265.0
margin_bottom = 1076.0
text = "Restart"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StacheGuyCounter" type="Label" parent="Fun"]
margin_left = 160.0
margin_top = 1056.0
margin_right = 192.0
margin_bottom = 1078.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StacheGuyCounter2" type="Label" parent="Fun"]
margin_left = 16.0
margin_top = 1056.0
margin_right = 158.0
margin_bottom = 1078.0
text = "Stache Guys Spawned:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnclickableArea" type="Control" parent="."]
margin_top = 1040.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="CanvasLayer" parent="."]

[node name="ExitGame" type="Button" parent="Controls"]
margin_left = 288.0
margin_top = 1056.0
margin_right = 365.0
margin_bottom = 1076.0
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
editor_draw_limits = true
editor_draw_drag_margin = true
[connection signal="pressed" from="Fun/Restart" to="." method="_on_Restart_pressed"]
[connection signal="gui_input" from="UnclickableArea" to="." method="_on_Control_gui_input"]
[connection signal="pressed" from="Controls/ExitGame" to="." method="_on_ExitGame_pressed"]
